<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mobile.promat.MainActivity$PlaceholderFragment" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" >

        <TextView
            android:id="@+id/txtPromedioDeseadoDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/promedio_deseado"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/editPromedioDeseadoDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_weight="1" >

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtCreditosCursadosDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/creditos_cursados"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/txtValorCreditosCursadosDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/valor_creditos_cursados_default"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtPromedioAcumuladoDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/promedio_acumulado"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/txtValorPromedioAcumuladoDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/valor_promedio_acumulado_default"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/txtCreditosDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/creditos" />

        <TextView
            android:id="@+id/txtPromedioSemestralRequeridoDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/promedio_semestral_requerido" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/txtValue12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/value12" />

        <TextView
            android:id="@+id/txtResult12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/result12" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtValue13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/value13" />

        <TextView
            android:id="@+id/txtResult13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/result13" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtValue14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/value14" />

        <TextView
            android:id="@+id/txtResult14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/result14" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/txtValue15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/value15" />

        <TextView
            android:id="@+id/txtResult15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/result15" />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/txtValue16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/value16" />

        <TextView
            android:id="@+id/txtResult16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/result16" />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/txtValue17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/value17" />

        <TextView
            android:id="@+id/txtResult17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/result17" />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/txtValue18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/value18" />

        <TextView
            android:id="@+id/txtResult18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/result18" />
        
    </TableRow>
 
    <TableRow
        android:id="@+id/tableRow12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/txtNullDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nulo"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnCalcularPromAcumDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calcular"
            android:onClick="calcularPromedioAcumuladoPorDefecto"
            android:layout_weight="1"
            android:background="@color/green01"
        	android:textColor="#ffffff" />

    </TableRow>

</TableLayout>
