<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mobile.promat.MainActivity$PlaceholderFragment" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" >

        <TextView
            android:id="@+id/txtAsignaturas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asignaturas"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtCreditos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/creditos"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editAsignatura1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/nombre"
            android:layout_weight="1" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editCreditos1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/num_creditos"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editAsignatura2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/nombre"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/editCreditos2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/num_creditos"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editAsignatura3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/nombre"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/editCreditos3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/num_creditos"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtNull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nulo"
            android:layout_weight="1"
            android:visibility="invisible" />
        
		<Button
	        android:id="@+id/btnIngresarAsignatura"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="ingresarAsignatura"
	        android:text="@string/ingresar"
	        android:layout_weight="1"
	        android:background="@color/blue01"
        	android:textColor="#ffffff" />
		
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtNull2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nulo"
            android:layout_weight="1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnNotas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="verVistaNotas"
            android:text="@string/gestionar_notas"
            android:layout_weight="1"
            android:background="@color/orange01"
        	android:textColor="#ffffff" />

    </TableRow>

</TableLayout>